<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<name>runtime</name>
	<url>https://github.com/assimbly/runtime</url>
	<packaging>pom</packaging>
	<groupId>org.assimbly</groupId>
	<artifactId>runtime</artifactId>
	<version>5.1.0</version>

	<modules>
		<module>activemqBase</module>
		<module>camelBase</module>
		<module>camelComponents</module>
		<module>databaseDrivers</module>
		<module>commonBase</module>
		<module>springBase</module>
		<module>testBase</module>
		<module>utils</module>
		<module>broker</module>
		<module>brokerRest</module>
		<module>commons</module>
		<module>dil</module>
		<module>integration</module>
		<module>integrationRest</module>
	</modules>
	
	<properties>

		<maven-api.version>3.9.11</maven-api.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.versions.rules>file:///${project.basedir}/rules.xml</maven.versions.rules>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<main.basedir>${project.basedir}</main.basedir>

		<!-- Manage the versions of all main dependencies here -->
		<aopalliance.version>1.0</aopalliance.version>
		<axiom.version>2.0.0</axiom.version>
		<assimbly.version>5.1.0</assimbly.version>
		<activemq-classic.version>6.1.7</activemq-classic.version>
		<activemq-artemis.version>2.42.0</activemq-artemis.version>
		<activemq-artemis-native.version>2.0.0</activemq-artemis-native.version>
		<bouncycastle.version>1.81</bouncycastle.version>
		<camel.version>4.14.0</camel.version>
		<commons-beanutils.version>1.11.0</commons-beanutils.version>
		<commons-cli.version>1.9.0</commons-cli.version>
		<commons-codec.version>1.19.0</commons-codec.version>
		<commons-collections4.version>4.5.0</commons-collections4.version>
		<commons-compress.version>1.28.0</commons-compress.version>
		<commons-configuration2.version>2.12.0</commons-configuration2.version>
		<commons-dbcp.version>2.13.0</commons-dbcp.version>
		<commons-io.version>2.20.0</commons-io.version>
		<commons-jxpath.version>1.4.0</commons-jxpath.version>
		<commons-lang3.version>3.18.0</commons-lang3.version>
		<commons-net.version>3.11.1</commons-net.version>
		<commons-math3.version>3.6.1</commons-math3.version>
		<commons-text.version>1.14.0</commons-text.version>
		<db2-jdbc.version>db2jcc4</db2-jdbc.version>
		<docconverter.version>1.15.0</docconverter.version>
		<dropwizard-metrics.version>4.2.33</dropwizard-metrics.version>
		<elasticsearch-rest-client.version>9.1.0</elasticsearch-rest-client.version>
		<h2database.version>2.3.232</h2database.version>
		<hamcrest.version>3.0</hamcrest.version>
		<gson.version>2.13.1</gson.version>
		<groovy-script.version>4.0.28</groovy-script.version>
		<guava.version>33.4.8-jre</guava.version>
		<ibmmq-client.version>9.4.3.0</ibmmq-client.version>
		<informix-jdbc.version>15.0.0.1.1</informix-jdbc.version>
		<jackson.version>2.19.2</jackson.version>
		<jakarta-activation-api.version>2.1.3</jakarta-activation-api.version>
		<jakarta-annotation-api.version>3.0.0</jakarta-annotation-api.version>
		<jakarta-json-api.version>2.1.3</jakarta-json-api.version>
		<jakarta-servlet-api.version>6.1.0</jakarta-servlet-api.version>
		<jakarta-xml-soap-api.version>3.0.2</jakarta-xml-soap-api.version>
		<jakarta-xml-bind-api.version>4.0.2</jakarta-xml-bind-api.version>
		<jasypt.version>1.9.3</jasypt.version>
		<jeka.version>0.11.53</jeka.version>
		<json.version>20250517</json.version>
		<jsonassert.version>1.5.3</jsonassert.version>
		<json-path.version>2.9.0</json-path.version>
		<jwt.version>0.12.6</jwt.version>
		<jolokia.version>2.2.9</jolokia.version>
		<httpclient.version>4.5.14</httpclient.version>
		<kamelet.version>4.13.0</kamelet.version>
		<logback-classic.version>1.5.18</logback-classic.version>
		<mapdb.version>3.1.0</mapdb.version>
		<messaginghub.version>3.1.7</messaginghub.version>
		<mssql-jdbc.version>12.10.1.jre11</mssql-jdbc.version>
		<mysql-connector-java.version>9.3.0</mysql-connector-java.version>
		<oracle.version>23.9.0.25.07</oracle.version>
		<postgresql.version>42.7.7</postgresql.version>
		<qpid-proton-j.version>0.34.1</qpid-proton-j.version>
		<slf4j.version>2.0.17</slf4j.version>
		<spring.version>6.2.9</spring.version>
		<spring-boot.version>3.5.5</spring-boot.version>
		<spring-data.version>3.5.2</spring-data.version>
		<springdoc.version>2.8.9</springdoc.version>
		<sqlite-jdbc.version>3.50.3.0</sqlite-jdbc.version>
		<tika.version>1.28.5</tika.version>
		<xerces.version>2.12.2</xerces.version>
		<xpath2.version>1.2.0</xpath2.version>
		<xmlunit.version>2.10.3</xmlunit.version>
		<zip4j.version>2.11.5</zip4j.version>

		<!-- Manage the versions of test dependencies here -->
		<assertj.version>3.27.4</assertj.version>
		<googleauth.version>1.5.0</googleauth.version>
		<jackson.version>2.19.2</jackson.version>
		<jetty.version>12.1.0</jetty.version>
		<json.version>20250107</json.version>
		<json-unit-assertj.version>4.1.1</json-unit-assertj.version>
		<junit.version>5.13.4</junit.version>
		<mockito.version>5.18.0</mockito.version>
		<mockserver.version>5.15.0</mockserver.version>
		<mongo.version>4.7.2</mongo.version>
		<powermock.version>2.0.9</powermock.version>
		<testcontainers.version>1.21.3</testcontainers.version>

	</properties>

	<distributionManagement>
		<repository>
			<id>github</id>
			<name>Temporary Staging Repository</name>
			<url>https://maven.pkg.github.com/assimbly/runtime</url>
		</repository>
	</distributionManagement>
	
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.16.2</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>dependency-updates-report</report>
							<report>plugin-updates-report</report>
							<report>property-updates-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>
	
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.5.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.14.0</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<compilerArgs>
							<arg>-XDcompilePolicy=simple</arg>
							<arg>--should-stop=ifError=FLOW</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
							<arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
							<arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.6.1</version>
					<executions>
						<execution>
							<id>enforce-maven</id>
							<goals>
								<goal>enforce</goal>
							</goals>
							<configuration>
								<rules>
									<requireMavenVersion>
										<version>[3.9.9,)</version>
									</requireMavenVersion>
									<requireJavaVersion>
										<version>21</version>
									</requireJavaVersion>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.4.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.4</version>
				</plugin>
				<plugin>
					<artifactId>maven-project-info-reports-plugin</artifactId>
					<version>3.9.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.21.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.5.3</version>
				</plugin>
				<plugin>
					<artifactId>maven-toolchains-plugin</artifactId>
					<version>3.2.0</version>
					<executions>
						<execution>
							<goals>
								<goal>toolchain</goal>
							</goals>
							<configuration>
								<toolchains>
									<jdk>
										<version>21</version>
									</jdk>
								</toolchains>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>2.18.0</version>
				<configuration>
					<rulesUri>${maven.versions.rules}</rulesUri>
				</configuration>
			</plugin>
		</plugins>
	</build>
	
</project>
